kubernetes-networks/canary/canary-web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: canary-web
  name: canary-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: canary-web
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 100%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: canary-web
    spec:
      containers:
      - name: web
        image: vradnit/web:canary-0.1
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket:
            port: 8000
        volumeMounts:
        - name: app
          mountPath: /app
      volumes:
      - name: app
        emptyDir: {}
