kubernetes-networks/canary/canary-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-web-svc
spec:
  selector:
    app: canary-web
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
